# sgr_macros

./: Cargo.toml  README.md
src/: ansi.rs  lib.rs  sgr.rs
src/ansi/: base.rs
src/sgr/: base.rs  color.rs  rgb.rs  traits.rs
tests/: test_sgr.rs
