[package]
name = "sgr_macros"
description = """Macros for ergonomically formatting text with ANSI control \
sequences at compile-time."""
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

#authors =
#repository =
documentation = "https://docs.rs/sgr_macros"
readme = "README.md"

exclude = ["/.idea"]
categories = ["command-line-interface"]
keywords = ["cli", "color", "macro", "terminal", "text"]


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"

[dependencies.const_format]
version = "0.2.26"
optional = true


[features]
default = []

const = ["const_format"]
